k8s/dev/laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: dev
spec:
  selector:
    app: laravel
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9000
  type: ClusterIP
